--- a/src/XNA/NvgSharp.FNA.Core.csproj
+++ b/src/XNA/NvgSharp.FNA.Core.csproj
@@ -26,4 +26,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\FNA\FNA.Core.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
+  </ItemGroup>
 </Project>
